# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  15 Oct 2002; Nicholas Jones <carpaski@gentoo.org> portage.py, emerge:
  emerge depclean -- Removes all packages that are not explicitly or
                     dependancy merged.

  15 Oct 2002; Nicholas Jones <carpaski@gentoo.org> ebuild.sh:
	depend now prints IUSE. Doesn't do anything with it yet.
  unpack() -- unzip silently overwrites files (not mentioned by adder).

  15 Oct 2002; Nicholas Jones <carpaski@gentoo.org> make.globals:
  Touch ups + warning.

  15 Oct 2002; Brandon Low <lostlogic@gentoo.org> etc-update:
  Make etc-update find all the same CONFIG_PROTECT files as portage
  by importing it's settings from portage.

  13 Oct 2002; Nicholas Jones <carpaski@gentoo.org> portage.py:
  Bug 5926 -- If the fetchonly AND pretend flags are specified, then
              portage should give a list of all the SRC_URIs so that
              they can be downloaded or sent into another app.
  Made sandbox display name in 'ps' as '[$PF] sandbox'.

  13 Oct 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
  Bug 5926 -- See portage.py for today. (emerge -pf)
  Typo fixes.

  13 Oct 2002; Nicholas Jones <carpaski@gentoo.org> ebuild.sh:
  Added -q to unzip to make it quiet like the others.
  Bug 6033 -- Fix for infinate loop in eclasses in portage overlay.

  12 Oct 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fix for
  doebuild() so that our rsync mirror will contain full digests and not just
  partial digests for x86.

  12 Oct 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
  Added --progress to rsync. This puts the file progress meters
  back on. Users have requested this, and it's not detrimental.
  Just creates a lot of output, as the man page says: "It gives
  bored users something to look at."

  12 Oct 2002; Nicholas Jones <carpaski@gentoo.org> portage.py: